tests/should_fail/type_list_annotation_mismatch.nv
module main

// SHOULD FAIL: list annotation type contradicts element type
// [1, 2, 3]: String — annotated as String but elements are Int
let xs = [1, 2, 3]: String
println(xs)
